@startuml
skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam packageStyle rectangle
skinparam shadowing false

package "hust.hedspi.oop.game.managers" {

    class GameManager <<Singleton>> {
        - {static} instance: GameManager
        - currentState: GameState
        - player: Cat
        - GameManager()
        + {static} getInstance(): GameManager
        + startNewGame(isStrayCat: boolean): void
        + update(dt: float): void
        + pauseGame(): void
        + resumeGame(): void
        + getCurrentState(): GameState
        + getPlayer(): Cat
    }

    class TimeManager <<Singleton>> {
        - {static} instance: TimeManager
        - timer: float
        - inGameHour: int
        - inGameMinute: int
        - currentDayOfWeek: DayOfWeek
        - currentPhase: Phase
        - observers: List<IObserver>
        - TimeManager()
        + {static} getInstance(): TimeManager
        + resetTime(): void
        + skipToNextMorning(): void
        + update(deltaTime: float): void
        - incrementTime(): void
        + getInGameHour(): int
        + getInGameMinute(): int
        + getCurrentDayOfWeek(): DayOfWeek
        + getCurrentPhase(): Phase
    }

    class StoryManager <<Singleton>> {
        - {static} instance: StoryManager
        - playerHistory: Map<MinigameID, GameResult>
        - endingsDatabase: List<EndingCondition>
        - StoryManager()
        + {static} getInstance(): StoryManager
        + initHistory(): void
        + resetStoryFlags(): void
        - buildEndingsConfig(): void
        + recordResult(id: MinigameID, isWin: boolean): void
        - triggerInstantGameOver(reason: String): void
        + isMinigameUnlocked(requestedGame: MinigameID): boolean
        + evaluateFinalEnding(player: Cat): EndingCondition
        + isZoneUnlocked(zoneName: String): boolean
    }

    class ScreenManager <<Singleton>> {
        - {static} instance: ScreenManager
        - game: Game
        - screenStack: Stack<Screen>
        - ScreenManager()
        + {static} getInstance(): ScreenManager
        + initialize(game: Game): void
        + pushScreen(screen: Screen): void
        + popScreen(): void
        + clearAndSetScreen(screen: Screen): void
        + getCurrentScreen(): Screen
    }

    class ResourceManager <<Singleton>> {
        - {static} instance: ResourceManager
        + dialogFont: BitmapFont
        + nameFont: BitmapFont
        + hudFont: BitmapFont
        - bundle: I18NBundle
        - ResourceManager()
        + {static} getInstance(): ResourceManager
        + initialize(): void
        + getBundle(): I18NBundle
        - generateFonts(): void
        + dispose(): void
    }

    class MapManager <<Singleton>> {
        - {static} instance: MapManager
        - currentMap: TiledMap
        - mapRenderer: OrthogonalTiledMapRenderer
        - collisionRectangles: List<Rectangle>
        - triggerZones: List<TriggerZone>
        - npcs: List<NPC>
        - MapManager()
        + {static} getInstance(): MapManager
        + loadMap(filePath: String): void
        - loadCollisions(): void
        - loadTriggers(): void
        + render(camera: OrthographicCamera): void
        + getCollisionRectangles(): List<Rectangle>
        + getTriggerZones(): List<TriggerZone>
        + getNpcs(): List<NPC>
        + getMapPixelWidth(): float
        + getMapPixelHeight(): float
        + dispose(): void
    }
    
    class SaveManager {
        - {static} SAVE_FILE: String
        + {static} TOTAL_ENDINGS: int
        + {static} unlockEnding(endingKey: String): void
        + {static} getUnlockedEndingsCount(): int
    }

}

GameManager ..> TimeManager : "đồng bộ update"
ScreenManager ..> ResourceManager : "sử dụng Font/Texture"
MapManager ..> StoryManager : "check điều kiện mở vùng"

note bottom of GameManager
  Điều phối vòng lặp sống của Player 
  và trạng thái Game (Pause/Play)
end note

note bottom of TimeManager
  Mô phỏng thời gian in-game (1s = 2p).
  Là Subject (Observer Pattern) báo tin cho HUD
end note

note bottom of StoryManager
  Chain of Responsibility + Builder:
  Chốt Ending & Mở khóa màn chơi
end note

@enduml
